basic editor functionality, saving, multiple buffers, line numbers

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -4,14 +4,16 @@ version = "0.1.0"
 edition = "2024"
 
 [[bin]]
-name = "main"
-path = "main.rs"
+name = "terminal"
+path = "bin/terminal.rs"
 
 [lib]
 path = "lib.rs"
 
 [dependencies]
-anyhow = "1.0.100"
-crossterm = "0.29.0"
-ropey = "1.6.1"
-thiserror = "2.0.17"
+anyhow = "1"
+env_logger = "0.11"
+log = "0.4"
+ratatui = "0.29"
+ropey = "1.6"
+thiserror = "2"
