--- a/Cargo.toml
+++ b/Cargo.toml
@@ -17,3 +17,4 @@ log = "0.4"
 ratatui = "0.29"
 ropey = "1.6"
 thiserror = "2"
+tokio = { version = "1.48.0", features = ["rt-multi-thread", "fs", "macros", "sync"] }
