--- a/Cargo.toml
+++ b/Cargo.toml
@@ -14,6 +14,7 @@ path = "lib.rs"
 anyhow = "1"
 env_logger = "0.11"
 log = "0.4"
+mlua = { version = "0.11.4", features = ["lua54", "vendored", "async"] }
 ratatui = "0.29"
 ropey = "1.6"
 thiserror = "2"
