--- a/iota-terminal/Cargo.toml
+++ b/iota-terminal/Cargo.toml
@@ -6,11 +6,18 @@ edition = "2024"
 [lib]
 path = "lib.rs"
 
+[[bin]]
+name = "iota-terminal"
+path = "main.rs"
+
 [dependencies]
 ratatui = "0.29"
 iota-core = { path = "../iota-core" }
-iota-editor = { path = "../iota-editor" }
 iota-input = { path = "../iota-input" }
+iota-protocol = { path = "../iota-protocol" }
 anyhow.workspace = true
-tokio.workspace = true
+bincode.workspace = true
+env_logger.workspace = true
+interprocess.workspace = true
 log.workspace = true
+tokio.workspace = true
